--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
         <p>Choose a category below:</p>
       </div>
       <div class="category-buttons">
-        <button id="general-knowledge">General Knowledge</button>
-        <button id="science-computers">Science: Computers</button>
-        <button id="video-games">Video Games</button>
+        <button class="questions-btn" id="general-knowledge">
+          General Knowledge
+        </button>
+        <button class="questions-btn" id="science-computers">
+          Science: Computers
+        </button>
+        <button class="questions-btn" id="video-games">Video Games</button>
       </div>
       <div id="question-container">
         <p id="question-box"></p>
         <div id="button-container">
-          <button id="True">True</button>
-          <button id="False">False</button>
+          <button class="true-btn tf-btn" id="True">True</button>
+          <button class="false-btn tf-btn" id="False">False</button>
         </div>
       </div>
       <button id="refresh-button">Refresh</button>
